added pixel colour changing functionality

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <button id="incPix">Increase pixels</button>
+    <button id="reset"> Reset</button>
 <div id="container">
 <div id="etch-container">
 </div>
