Added increase pixels and clear buttons

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 </head>
 
 <body>
-    <button id="incPix">Increase pixels</button>
-    <button id="reset"> Reset</button>
-<div id="container">
-<div id="etch-container">
+    <h1>Etch-A-Sketch</h1>
+    <div id="buttons">
+        <button id="incPix">Increase pixels</button>
+        <button id="reset"> Clear</button>
+    </div>
+
+<div id="etch-container"> 
 </div>
-</div>
+
 
 
 </body>
