--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="main.css"></link>
 <script src="main.js" defer></script> 
+<title>Etch-A-Sketch</title>
 </head>
 
 <body>
